--- a/index.html
+++ b/index.html
@@ -1,57 +1,106 @@
 <!DOCTYPE html>
 <html>
-    <!--simple mapbox to represent AMz vs Others data-->
-    <head>
-        <title> AMZ vs Others Plot Sept 16 Vaughan Puro</title>
-        <meta name = "viewport" content ="initial-scale=1,maximum-scale=1,user-scalable=no" />
-        <script src= 'https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
-        <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
-        <style type="text/css">
-            body {
-                margin: 0;
-                padding: 0;
-            }
-    
-            #map {
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                width: 100%;
-            }
-        </style>
+  <!--simple mapbox to represent AMz vs Others data-->
+  <head>
+    <title>AMZ vs Others Plot Sept 16 Vaughan Puro</title>
+    <meta
+      name="viewport"
+      content="initial-scale=1,maximum-scale=1,user-scalable=no"
+    />
+    <script src="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js"></script>
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
+    <style type="text/css">
+      body {
+        margin: 0;
+        padding: 0;
+      }
 
-    </head>
-    <body>
-        <div id='map'></div>
-        <script>
-            mapboxgl.accessToken = 'pk.eyJ1Ijoia3F1YWlub28iLCJhIjoiY2tmb3ZsMXFsMDFsdzJxb3hsenhiam0wciJ9.Hycza97C9ZS4KEzKdP-ofA';
+      #map {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script>
+      mapboxgl.accessToken =
+        "pk.eyJ1Ijoia3F1YWlub28iLCJhIjoiY2tmb3ZsMXFsMDFsdzJxb3hsenhiam0wciJ9.Hycza97C9ZS4KEzKdP-ofA";
 
-            var map = new mapboxgl.Map({
-                container: 'map',
-                style: 'mapbox://styles/kquainoo/cklbazkjl2pif17myarsgp9q2',
-                center: [-79.526, 43.859], //long, lat
-                zoom: 11.19
-            });
+      var map = new mapboxgl.Map({
+        container: "map",
+        style: "mapbox://styles/kquainoo/cklbazkjl2pif17myarsgp9q2",
+        center: [-79.385, 43.659], //long, lat
+        //43.65942698849854, -79.38551295824337
+        zoom: 11.19,
+      });
 
-            // adding FSA layer
+      // adding FSA layer
 
-            map.addSource('fsa', {
-                type: 'geojson',
-                data: 'https://raw.githubusercontent.com/kQuainoo/VizPuro/main/FSAJoinMorsePU.geojson',
-                buffer: 0,
-                maxzoom: 12
-            });
+      function init() {
+        map.addSource("fsa", {
+          type: "geojson",
+          data:
+            "https://raw.githubusercontent.com/kQuainoo/CoolSpacesTO/main/FSAMorsePUConverted.geojson",
+          buffer: 0,
+          maxzoom: 12,
+        });
+        console.log("load data");
 
-            map.addlayer({
-                id: 'fsalayer',
-                type: 'fill',
-                source: 'fsa',
-                layout: {},
-                paint: {
-                    'fill-color': '#f08',
-                    'fill-opacity': 0.2
-                }
-            });
-        </script>
-    </body>
+        map.addLayer({
+          id: "fsalayer",
+          type: "fill",
+          source: "fsa",
+          layout: {},
+          paint: {
+            "fill-color": "#f08",
+            "fill-opacity": 0.2,
+          },
+        });
+      };
+
+      map.on("load", function (e) {
+        init();
+        console.log("this is func load");
+      });
+
+      //define popup variable
+
+      var popup = new mapboxgl.Popup();
+
+      // see total count of stops for fsa on hover
+      map.on("mousemove", function (e) {
+
+        if(!map.loaded()) {
+            return;
+        }
+
+        var features = map.queryRenderedFeatures(e.point, {
+          layers: ["fsalayer"],
+        });
+
+        if (!features.length) {
+          popup.remove();
+          return;
+        }
+
+        var feature = features[0];
+
+        popup
+          .setLngLat(feature.geometry.coordinates[0][0])
+          .setHTML(feature.properties.Count_)
+          .addTo(map);
+
+        map.getCanvas().style.cursor = features.length ? "pointer" : "";
+      });
+
+
+
+    </script>
+  </body>
 </html>
