--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
           buffer: 0,
           maxzoom: 12,
         });
-        console.log("load data");
-
+        map.addSource("ONQC", {
+          type: "geojson",
+          data: "https://raw.githubusercontent.com/kQuainoo/VizPuro/main/ONQCboundary.geojson",
+          buffer:0,
+          maxzoom:12
+        })
         map.addLayer({
           id: "fsalayer",
           type: "fill",
@@ -62,11 +66,21 @@
             "fill-opacity": 0.2,
           },
         });
+        map.addLayer({
+          id: "provincelayer",
+          type: "geojson",
+          source: "ONQC",
+          layout:{},
+          paint: {
+            "fill-color":"#f08",
+            "fill-opacity: 0.2
+          }
+        })
       };
 
       map.on("load", function (e) {
         init();
-        console.log("this is func load");
+        //console.log("this is func load");
       });
 
       //define popup variable
