--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <!--simple mapbox to represent AMz vs Others data-->
+  <!--just adding another comment-->
   <head>
     <title>AMZ vs Others Plot Sept 16 Vaughan Puro</title>
     <meta
